Edit alignment issues with book rating for rating stars and box

--- a/WebSite/css/grid.css
+++ b/WebSite/css/grid.css
@@ -58,7 +58,9 @@ body{
   .Grid-cell--center {
     align-self: center;
   }
-  
+  .Grid-cell > img{
+    max-width: 100%;
+  }
   .Grid-cell--autoSize {
     flex: none;
   }
